--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,21 @@ layout: default
 
 <section>
   <div class="post-container">
-    <h4 class="project-title">{{ page.title }}</h4>
-    <div class="project-load">{{ content }}</div>
+    <!-- <h4 class="project-title">{{ page.title }}</h4>
+    <div class="project-load">{{ content }}</div> -->
+    <h2 class="project-title" style="text-align:center; margin-top: 0.2rem;">
+      {{ page.title_line1 | default: page.title }}
+      {% if page.title_line2 %}
+        <br />{{ page.title_line2 }}
+      {% endif %}
+    </h2>
+
+{% if page.subtitle %}
+  <h3 style="text-align:center; margin-top: -0.6rem;">{{ page.subtitle }}</h3>
+{% endif %}
+
+<div class="project-load">{{ content }}</div>
+
   </div>
   {% if site.data.settings.disqus.comments %}
     {% include disqus.html %}
