--- a/_sass/3-sections/_post.sass
+++ b/_sass/3-sections/_post.sass
@@ -22,3 +22,20 @@
     +position(absolute, -3px null null -35px)
   .loading
     text-align: center
+
+.project-header
+  text-align: center
+  margin: 1.2rem 0 1.8rem
+
+  .project-title
+    font-size: 30px
+    line-height: 1.22
+    margin: 0
+    word-break: normal
+    overflow-wrap: anywhere
+
+  .project-subtitle
+    font-size: 18px
+    font-weight: 600
+    line-height: 1.3
+    margin: .3rem 0 0
