--- a/_sass/3-sections/_page.sass
+++ b/_sass/3-sections/_page.sass
@@ -15,3 +15,29 @@
 @media (max-width: 768px)
   .page-content
     width: 80vw
+
+// Typography overrides for content pages + project pages
+.page-content, .project-load
+  h1
+    font-size: 36px
+    line-height: 1.2
+    margin: 22px 0 14px
+
+  h2
+    font-size: 30px
+    line-height: 1.25
+    margin: 20px 0 12px
+
+  h3
+    font-size: 20px
+    line-height: 1.35
+    margin: 18px 0 10px
+
+  h4
+    font-size: 18px
+    line-height: 1.35
+    margin: 16px 0 8px
+    color: #555
+
+  h1:first-child, h2:first-child, h3:first-child, h4:first-child
+    margin-top: 0
