style: fix heading overrides for pages and projects

--- a/_sass/3-sections/_page.sass
+++ b/_sass/3-sections/_page.sass
@@ -34,7 +34,8 @@
     font:
       size: 20px
     line-height: 1.35
-    margin: 18px 0 10px
+    padding: 0
+    margin: 30px 0 10px
 
   h4
     font:
@@ -45,3 +46,12 @@
 
   h1:first-child, h2:first-child, h3:first-child, h4:first-child
     margin-top: 0
+
+// Project pages: override post-container heading rules from theme
+.post-container
+  h4
+    font:
+      size: 18px
+    line-height: 1.35
+    margin: 16px 0 8px
+    color: #555
