--- a/_sass/3-sections/_page.sass
+++ b/_sass/3-sections/_page.sass
@@ -1,38 +1,44 @@
 .page-content
   width: 450px
   margin: 30px
-  h1
-    line-height: 1.5
-    color: black
-    font:
-      size: 30px
-      weight: 700
+
+  // Base text
   p
     line-height: 1.5
     font:
       size: 16px
+
+  // Keep headings bold/black by default on content pages
+  h1
+    color: black
+    font:
+      weight: 700
 
 @media (max-width: 768px)
   .page-content
     width: 80vw
 
 // Typography overrides for content pages + project pages
-.page-content, .project-load
+// (scoped to avoid impacting global theme headings on the home page)
+.page-content, .project-load, .post-container
   h1
     font:
       size: 36px
+      weight: 700
     line-height: 1.2
     margin: 22px 0 14px
 
   h2
     font:
       size: 30px
+      weight: 700
     line-height: 1.25
     margin: 20px 0 12px
 
   h3
     font:
       size: 20px
+      weight: 700
     line-height: 1.35
     padding: 0
     margin: 30px 0 10px
@@ -40,18 +46,11 @@
   h4
     font:
       size: 18px
-    color: #555
+      weight: 700
     line-height: 1.35
     margin: 16px 0 8px
+    padding: 0
+    color: #555
 
   h1:first-child, h2:first-child, h3:first-child, h4:first-child
     margin-top: 0
-
-// Project pages: override post-container heading rules from theme
-.post-container
-  h4
-    font:
-      size: 18px
-    line-height: 1.35
-    margin: 16px 0 8px
-    color: #555
