style: fix heading overrides for pages and projects

--- a/_sass/3-sections/_post.sass
+++ b/_sass/3-sections/_post.sass
@@ -4,12 +4,12 @@
   position: relative
   display: block
   h4
-    color: black
+    color: #555
     line-height: 1.2
     margin-bottom: 10px
     font:
       weight: 700
-      size: 24px
+      size: 18px
   img
     max-width: 100%
   a
