--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,14 +1,11 @@
 <div class="image-container">
   <a href="{{ include.url }}" target="_blank">
-    <img src="{{ site.github.url }}/assets/img/{{ include.image }}" alt="Avatar" class="image">
-    <div class="overlay">
-      <div class="text">
-        {% if include.text %}
-          {{ include.text }} <i class="fa fa-arrow-right" aria-hidden="true"></i>
-        {% else %}
-          View Demo <i class="fa fa-arrow-right" aria-hidden="true"></i>
-        {% endif %}
+    <img src="{{ site.github.url }}/assets/img/{{ include.image }}" alt="{{ include.alt }}" class="image">
+
+    {% if include.text %}
+      <div class="image-overlay">
+        <p><strong>{{ include.text }} <i class="fa fa-arrow-right" aria-hidden="true"></i></strong></p>
       </div>
-    </div>
+    {% endif %}
   </a>
 </div>
